Add JVM options and change output to war file